# task1

./: CMakeLists.txt  data_container.cpp  data_container.h  executor.cpp  executor.h  file_parser.cpp  file_parser.h  line_container.cpp  line_container.h  main.cpp
